Prevent overflow on small screens

--- a/resources/assets/sass/_components.scss
+++ b/resources/assets/sass/_components.scss
@@ -14,6 +14,10 @@
     }
 }
 
+#app {
+	overflow-x: hidden;
+}
+
 #app-content {
 	min-height: 100vh;
 }
